# surreal

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml  main.rs  newgpckey  newgpckey.pub  realtime.rs  socket.rs  surreal.rs  test-2024-08-17.surql  test.surql
db/: connection.rs
errors/: app_errors.rs
models/: blocks.rs  mod.rs  tables.rs  templates.rs
services/: mod.rs
services/blocks/: blocks.rs  mod.rs  router.rs
services/tables/: mod.rs  router.rs  tables.rs
services/templates/: mod.rs  router.rs  templates.rs
src/: main.rs  updbase_v2.rs  versionsupportthing.rs
src/service/: persona.rs
stores/: mod.rs
stores/block_documents_store/: document_store.rs  mod.rs
stores/block_templates_store/: mod.rs  template_store.rs
stores/tables_store/: mod.rs  tables_store.rs
versions/: upbase_3.rs  upbase_v1.rs  upbase_v4.rs
