[package]
name = "upbase"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
futures-util = "0.3.30"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = "1.5.3"
tokio = { version = "1.38.0", features = ["full"] }
uuid = "1.10.0"
warp = "0.3.7"
# Add your dependencies here

[workspace]


[[bin]]
name="upbase"
path="src/main.rs"
