[package]
name = "upbase"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
derive_more = {version="1.0.0", features = ["display","error","from"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.22"
ntex = { version = "2.3.0", features = ["tokio"] }
ntex-cors = "2.0.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = "1.5.3"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["full"] }
uuid = "1.10.0"
# Add your dependencies here

[workspace]


[[bin]]
name="upbase"
path="main.rs"
